# fastapi-calculate-product-cost

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: run_service.yml
src/: main.py
src/api/: calculator.py
src/db/: models.py  session.py
src/schemas/: calc.py
src/services/: calculator.py
